Fix spacing issues in ProfileBanner and update text

--- a/src/profilePage/ProfileBanner.css
+++ b/src/profilePage/ProfileBanner.css
@@ -9,8 +9,8 @@
     padding-bottom: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    padding: 40px 20px 20px 20px;
+
+    padding: 20px;
 }
 
 .profile-banner::before {
@@ -27,10 +27,10 @@
     max-width: 1000px;
     font-weight: bold;
     width: 100%;
-    padding: 50px 0px;
+    padding: 10px 0px;
     box-sizing: border-box;
-    padding-top: 10px;
-    font-weight: bold;
+
+
 }
 
 .banner-headline {
@@ -41,7 +41,7 @@
 .banner-description {
     font-size: 1rem;
     margin-bottom: 20px;
-    font-size: 14px;
+
     white-space: pre-line;
 }
 
@@ -89,7 +89,7 @@
 
     .banner-headline {
         font-size: 2rem;
-        margin-top: 10rem;
+        margin-top: 4rem;
     }
 
     .banner-description {
